# Hack-Forge

./: .gitignore  Dockerfile  README.md  app.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  aerosync_env.py  drone_env.py  models.py
grader/: easy.py  grader.py  hard.py  medium.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
tests/: test_env.py
