[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aerosync-ai"
version = "1.2.0"
description = "AeroSync AI — OpenEnv logistics simulation with warehouse robots and autonomous drones."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["openenv", "logistics", "multi-agent", "drones", "robotics", "reinforcement-learning"]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai>=1.30.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-anyio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "tasks*", "grader*"]
